test/trivial/bharshbarg/undeclared.good
undeclared.chpl:1: error: 'asdf' undeclared (first use this function)
