test/trivial/bharshbarg/undeclared.chpl
var x = asdf;
writeln(x);
